# conways_game_of_life

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  doxygen.config  environment.yml  profiler_script.sh  slurm_submit.peta4-icelake
cmake/: ClangFormat.cmake
report/: main.tex
report/sections/: 1-introduction.tex  3-development.tex  4-profiling.tex  5-conclusion.tex  conclusion.tex  development.tex  introduction.tex  profiling.tex  prototyping.tex
scripts/: profiler_script_icelake_1.sh  profiler_script_icelake_2.sh  profiler_script_mac.sh  runner.sh  slurm_submit_1.peta4-icelake  slurm_submit_2.peta4-icelake  slurm_submit_runner.peta4-icelake
src/: CMakeLists.txt  main.cpp
src/array2d/: CMakeLists.txt
src/array2d/include/: array2d.h  array2d.tpp
src/conway/: CMakeLists.txt  conway.cpp
src/conway/include/: conway.h
src/optims/: CMakeLists.txt  convolutions.cpp  lookup_transition.cpp  simpleio_convolution.cpp  transitions.cpp
src/plotting/: plots.ipynb  utils.py
src/timer/: CMakeLists.txt  timer.cpp
src/timer/include/: timer.h
src/utils/: CMakeLists.txt
src/utils/include/: array2d.h
tests/: CMakeLists.txt  test_array2d.cpp  test_conway.cpp  test_grid_glider.txt  test_mpi_comms.cpp
